themer/themes/solid/style.scss
/* ... */
					
					

/* 	++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
			WALLPAPER
		++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
	
		#content {
			width: 100%;
			margin: 0 0 70px 0;
			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
			font-weight: bold;
			font-size: 13px;
			h2.tag-heading {
				font-size: 30px;
				margin: 0 0 100px 0;
				span { 
					@include tag;
					@include border-radius(20px);
					font-size: 30px;
					padding: 4px 12px;
				}
			}
		 	.post {
				position: relative;
				width: 100%;
				overflow: hidden;
				margin: 0 0 130px 0;
				.display, .ipad, .iphone {
					position: relative;
					float: left;
					.image {
						position: absolute;
						background-repeat: no-repeat;
						background-position: center center;
					}
				}
				.display {
					width: 550px;
					height: 502px;
					margin: 0 55px 0 0;
					background: url(http://static.jimwhimpey.com/tumblr/solidbase/display.png);
					.image {
						width: 497px;
						height: 312px;
						top: 27px;
						left: 27px;
						background-size: 600px;
						.furniture {
							width: 497px;
							height: 312px;
							background: url(http://static.jimwhimpey.com/tumblr/solidbase/display-furniture.png) no-repeat top center;
						}
					}
				}
				.ipad {
					width: 231px;
					height: 300px;
					margin: 35px 55px 0 0;
					background: url(http://static.jimwhimpey.com/tumblr/solidbase/ipad.png);
					.image {
						width: 183px;
						height: 245px;
						top: 28px;
						left: 24px;
						.lock {
							width: 183px;
							height: 245px;
							background: url(http://static.jimwhimpey.com/tumblr/solidbase/ipad-lock.png) no-repeat center center;
						}
					}
				}
				.iphone {
					width: 112px;
					height: 220px;
					margin: 80px 0 0 0;
					background: url(http://static.jimwhimpey.com/tumblr/solidbase/iphone.png);
					.image {
						width: 98px;
						height: 148px;
						top: 37px;
						left: 8px;
						.lock {
							width: 98px;
							height: 148px;
							background: url(http://static.jimwhimpey.com/tumblr/solidbase/iphone-lock.png) no-repeat center center;
						}
					}
				}
				a.link { display: block; }
				.meta {
					position: absolute;
					bottom: 55px;
					right: 0;
					text-align: right;
					a { color: #333; }
					.permalink {
						display: inline-block;
						width: 18px;
						height: 20px;
						color: #999;
						background: #666;
						border: 1px solid #666;
						-webkit-border-radius: 3px;
						-moz-border-radius: 3px;
						border-radius: 3px;
						padding: 0 3px 4px 3px;
						margin: 0 7px 0 0;
						font-family: Georgia, Times, serif;
						font-size: 20px;
						&:hover {
							color: #FFF;
							background: #444;
							border: 1px solid #444;
						}
					}
					.attribution {
						display: inline-block;
						margin: 0 30px 0 0;
						p { 
							display: inline;
							font-size: 16px;
						}
						a:hover { border-bottom: 1px solid #000; }
					}
					.more {
						color: #666;
						a { @include tag; }
					}
				}
			}
		}			
		
	
/* 	++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
			NAVIGATION
		++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */	
	
	#navigation {
		width: 100%;
		overflow: hidden;
		margin-bottom: 120px;
		a {
			float: left;
			background: #666;
			font-size: 18px;
			text-transform: uppercase;
			padding: 8px 10px;
			border: 1px solid #666;
			-moz-border-radius: 8px;
			-webkit-border-radius: 8px;
			border-radius: 8px;
			line-height: 1em;
			color: #CCC;
			&:hover {
				background: #555;
				border: 1px solid #555;
			}
		}
		#nav-newer { margin-left: 50px; }
	}	
	
	
/* 	++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
			TEXT POST for the SUBMIT PAGE
		++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
	
	.text { width: 100%; overflow: hidden; }
	
	.text h2 {
		font-family: Helvetica, Arial, serif;
		font-weight: bold;
		font-size: 22px;
		margin: 0 0 10px 0;
		}
	
	.text p {
		font-size: 14px;
		line-height: 1.6em;
		margin: 0 0 20px 0;
		}
	

/* 	++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
			NOTES
		++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */

	.notes {
		clear: left;
		line-height: 1.5em;
		font-size: 13px;
		margin: 20px 0 50px 0;
		color: #464646;
		opacity: 0.9;
		}
		
		.notes:hover { opacity: 1; }
	
		.notes li { margin: 0 0 10px 0; }
	
		.notes a { color: #004080; }
	
			.notes a:hover { border-bottom: 1px solid #004080; }
	
		.notes img {
			border: 1px solid #000;
			position: relative;
			top: 5px;
			}
		
		.notes blockquote {
			margin: 10px 0 0 25px;
			border-left: 1px solid #BABABA;
			padding: 0 0 0 10px;
			font-style: italic;
			color: #828282;
			}
		
			.notes blockquote a { color: #3B7CB6; }
		
				.notes blockquote a:hover { border-bottom: 1px solid #3B7CB6; }
	
	
	
/* 	++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
			FOOTER
		++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
	
	#footer {
		display: none;
		font-size: 16px;
		text-shadow: #fff 1px 1px 0;
		color: #111;
		width: 500px;
		float: left;
		a {
			font-size: 18px;
			font-family: 'Chunk', Georgia, Times, serif;
			text-transform: uppercase;
		}
	}
	
	
	

